1)Apply access scope to entire system level 2)Revise controller authorization check